Титульная страница стала универсальной

--- a/titlepage/titlepage.tex
+++ b/titlepage/titlepage.tex
@@ -12,7 +12,7 @@
 \begin{center}
     \vspace{13ex}
 
-    \so{\textbf{Лабораторная работа №2.1.6}}
+    \so{\textbf{Лабораторная работа №_._._}}
 
     \vspace{1ex}
 
@@ -20,7 +20,7 @@
 
     на тему:
 
-    \textbf{\textit{<<Эффект Джоуля-Томсона>>}}
+    \textbf{\textit{<<>>}}
 
     \vspace{30ex}
 
