Поправка титульного листа

--- a/titlepage/titlepage.tex
+++ b/titlepage/titlepage.tex
@@ -12,7 +12,7 @@
 \begin{center}
     \vspace{13ex}
 
-    \so{\textbf{Лабораторная работа №_._._}}
+    \so{\textbf{Лабораторная работа №-.-.-}}
 
     \vspace{1ex}
 
