--- a/3 семестр/121/121.tex
+++ b/3 семестр/121/121.tex
@@ -116,14 +116,14 @@
 \begin{tabular}{|c|c|c|}
 \hline
 $n$  & $m, \text{г}$      & $m_0, \text{г}$  \\ \hline
-12 & 25,9 & 2,16 \\ \hline
-10 & 24,2   & 2,42 \\ \hline
+12 & 10,18 & 0,85 \\ \hline
+10 & 8,48   & 0,85 \\ \hline
 \end{tabular}
 \captionsetup{justification=centering}
 \caption{Измерение массы грузов}
 \end{table}
 Усредняя получим:
-\[ m_0^\text{ср} = 2,29 \pm 0,13 \ \text{г}\]
+\[ m_0 = 0,85 \ \text{г}\]
 Измерим диаметр одного шарика с помощью штангенциркуля и микрометра. $D$ -- диаметр $n$ шариков
 \begin{table}[H]
 \centering
@@ -202,7 +202,7 @@ $n$  & $t, \text{с}$     & $k$  & $T, \text{с}$ & $n$  & $t, \text{с}$     & 
 
 По значению углового коэффициента рассчитаем величину горизонтальной составляющей магнитного поля
 Земли по формуле: $B_h = \frac{\pi^2 m d^2}{3 k^2 P_m}$ 
-\[B_h = 0,58 \pm 0,04\ \text{Гс}\]
+\[B_h = 0,21 \pm 0,01\ \text{Гс}\]
 
 \subsection*{Определение вертикальной составляющей магнитного поля Земли}
 Определим механический момент сил, действующий со стороны магнитного поля Земли на горизонтально
@@ -239,14 +239,14 @@ n  & l & $m_\text{гр}, \text{г}$     & $M, \text{дин} \cdot \text{см}$  
 \end{figure}
 По значению углового коэффициента ($A$) вычисляем вертикальную составляющую магнитного поля Земли
 по формуле $B_\nu = A/P_m$ :
-\[ B_\nu  = 0,30 \pm 0,05\ \text{Гс}\]
+\[ B_\nu  = 0,36 \pm 0,02\ \text{Гс}\]
 
 Используя результаты измерений $B_h$ и $B_\nu$, определим магнитное наклонение $\beta$ и полную
 величину индукции магнитного поля Земли на широте Долгопрудного $B$. 
-     \[   \beta  \approx 27^\circ  \]
-     \[   B = 0,65 \pm 0,12 \ \text{Гс}\]
+     \[   \beta  \approx 60^\circ 2^\circ\]
+     \[   B = 0,42 \pm 0,07 \ \text{Гс}\]
 Оценим также полный магнитный момент $P_\text{з}$ Земли:
-\[ P_\text{З} \approx 8\cdot 10^{25}\ \text{эрг}/\text{Гс} \]
+\[ P_\text{З} \approx 5\cdot 10^{25}\ \text{эрг}/\text{Гс} \]
 
 \section{Обсуждение результатов и выводы}
 Была рассчитана сила сцепления двух неодимовых шаров:
@@ -267,12 +267,12 @@ n  & l & $m_\text{гр}, \text{г}$     & $M, \text{дин} \cdot \text{см}$  
 По значению углового коэффициента была рассчитана величина горизонтальной составляющей
 магнитного поля Земли:
 
-\[ B_h = 0,58 \pm 0,04\ \text{Гс} \quad (\varepsilon= 7\%)\]
+\[ B_h = 0,21 \pm 0,01\ \text{Гс} \quad (\varepsilon= 5\%)\]
 
-Результат оказался довольно сильно завышен относительно табличного значения:
-\[ B_h^\text{т} = 0,15\ \text{Гс} \]
+Результат оказался несколько завышен относительно табличного значения:
+\[ B_h^\text{т} = 0,17\ \text{Гс} \]
 
-Это можно объяснить весомым влиянием других магнитов, находящихся на небольших расстояний от
+Это можно объяснить влиянием других магнитов, находящихся на небольших расстояний от
 установки.
 
 Также был построен график зависимости механического момента силы $M$ от количества шариков,
@@ -280,23 +280,24 @@ n  & l & $m_\text{гр}, \text{г}$     & $M, \text{дин} \cdot \text{см}$  
 
 С помощью угла наклона графика была рассчитана вертикальная составляющая магнитного поля
 Земли: 
-\[ B_\nu = 0,30 \pm 0,05\ \text{Гс} \quad (\varepsilon = 17\%)  \]
+\[ B_\nu = 0,36 \pm 0,02\ \text{Гс} \quad (\varepsilon = 17\%)  \]
 
-Что с учетом погрешности соотносится с табличным значением:
-\[ B_\nu^\text{т} = 0,46 \ \text{Гс} \]
+Что с учетом погрешности оказалось  несколько меньше табличного значения:
+\[ B_\nu^\text{т} = 0,5 \ \text{Гс} \]
 
 Исходя из горизонтальной и вертикальной компоненты магнитного поля Земли было определено
 магнитное отклонение $\beta$ и полная величина индукции магнитного поля Земли:
-\[ \beta \approx 27^\circ \]
-\[ B = 0,65 \pm 0,12\ \text{Гс} \quad (\varepsilon = 18\%) \]
+\[ \beta \approx 60^\circ \pm 2^\circ \]
+\[ B = 0,42 \pm 0,07\ \text{Гс} \quad (\varepsilon = 17\%) \]
 
-Видно, что значения плохо соотносятся с табличным в основном из-за рассчитанной горизонтальной
+Видно, что значения плохо соотносятся с табличным, что также можно объяснить влиянием других
+магнитов. 
 составляющей магнитного поля Земли:
-\[ \beta^\text{т} = 71^\circ \]
-\[ B = 0,48 \ \text{Гс}\]
+\[ \beta^\text{т} = 72^\circ \]
+\[ B = 0,53 \ \text{Гс}\]
 
 Также была получена достаточно грубая оценка магнитного момента $P_\text{з}$ Земли:
-\[P_\text{з} \approx 8 \cdot 10^{25}\ \text{эрг}/\text{Гс} \]
+\[P_\text{з} \approx 5 \cdot 10^{25}\ \text{эрг}/\text{Гс} \]
 
 \end{document}
 
