--- a/3 семестр (Электричество и магнетизм)/331/titlepage/titlepage.tex
+++ b/3 семестр (Электричество и магнетизм)/331/titlepage/titlepage.tex
@@ -12,7 +12,7 @@
 \begin{center}
     \vspace{13ex}
 
-    \so{\textbf{Лабораторная работа №121}}
+    \so{\textbf{Лабораторная работа №3.3.1}}
 
     \vspace{1ex}
 
@@ -20,7 +20,8 @@
 
     на тему:
 
-    \textbf{\textit{<<Измерение магнитного поля Земли>>}}
+    \textbf{\textit{<<Измерение удельного заряда электрона методом магнитной фокусировки и
+    магнетрона>>}}
 
     \vspace{30ex}
 
