--- a/3 семестр (Электричество и магнетизм)/331/331a.tex
+++ b/3 семестр (Электричество и магнетизм)/331/331a.tex
@@ -342,12 +342,19 @@ $B_\text{кр}^2,\ \text{Тл} \cdot 10^{-6}$        & $\Delta B_\text{кр}^2,\
 
 \textbf{Метод магнитной фокусировки:}
 \[
-    \left|\frac{e}{m} \right| = (1,92\pm 0,05) \cdot 10^{11}\ \text{Кл/кг} 
+    \left|\frac{e}{m} \right| = (1,92\pm 0,05) \cdot 10^{11}\ \text{Кл/кг} \quad (\varepsilon =
+    3\%)
 \] 
 
 \textbf{Метод магнетрона:}
 \[
-    \left|\frac{e}{m} \right| = (1,8\pm 0,2) \cdot 10^{11}\ \text{Кл/кг}
+    \left|\frac{e}{m} \right| = (1,8\pm 0,2) \cdot 10^{11}\ \text{Кл/кг} \quad (\varepsilon =
+    11\%)
+\] 
+
+\textbf{Табличное значение:}
+\[
+    \left| \frac{e}{m} \right| = 1,76 \cdot 10^{11}\ \text{Кл/кг}
 \] 
 
 Результат, полученный методом магнитной фокусировки, получился несколько завышен. Это может быть связано с
