--- a/3 семестр (Электричество и магнетизм)/322(4.8)/322.tex
+++ b/3 семестр (Электричество и магнетизм)/322(4.8)/322.tex
@@ -291,12 +291,182 @@ $r_L$ от положения сердечника и
     L = 310 \pm 30 \ \text{мГн}
 \]
 
+Для среднего положения
+сердечника построим векторную диаграмму
+напряжений
+при горизонтальном расположении $U_R$.
+
+Отложим на диаграмме активную ($U_{L, \
+\text{акт}}$)
+и реактивную ($U_{L, \
+\text{реакт}}$) составляющие
+напряжения на катушке и рассчитаем по
+ним значения $L$ и $r_L$.
+\[
+    L = 318 \pm 14\ \text{мГн}
+\]
+\[
+    r_L = 2,6 \pm 0,2\ \text{Ом}
+\]
 
 \begin{figure}[H]
+    \centering
     \includegraphics[width=\linewidth]{3}
+    \captionsetup{justification=centering}
+    \caption{Графики
+    зависимостей индуктивности $L$ и
+активного сопротивления катушки $r_L$ от
+положения сердечника $x$}
 \end{figure}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\linewidth]{4}
+    \captionsetup{justification=centering}
+    \caption{Векторная диаграмма
+    напряжений для среднего положения
+сердечника}
+\end{figure}
 
+Определим по диаграмме $\cos\Theta$ --
+сдвиг фаз между током и напряжением на
+катушке. Также вычислим значение по
+формуле (5)
+
+\[
+    \cos\Theta = 0,026 \pm
+    0,002 \ (\text{из диаграммы})
+\]
+
+\[
+    \cos\Theta = 0,180 \pm 0,007 \
+    (\text{по формуле (5)})
+\]
+
+
+С помощью векторной диаграммы по теореме
+косинусов выразим мощность $P_L$,
+выделяемую на катушке, через напряжения
+$U_R$, $U_L$, $U_{R+L}$ и сопротивление
+$R_1$.
+
+\begin{multline*}
+   P_L = U_L I \cos\Theta = U_L
+   \frac{U_R}{R_1}\frac{U_{L, \
+   \text{акт}}}{U_L} =
+   \frac{U_R}{R_1}(U_{L+R}\cos\varphi-U_R)
+   = \\
+   =
+   \frac{U_R}{R_1}
+   (U_{L+R}\frac{U_R^2+U_{L+R}^2-U_L^2}{2U_R
+       U_{L+R}} - U_R) =
+       \frac{U_{L+R}^2-U_R^2-U_L^2}{2 R_1}
+\end{multline*}
+   
+\[
+    P_L = 1,65 \pm 0,05 \ \text{Вт}
+\]
+
+Значение, измеренное ваттметром:
+\[
+    P_L^* = 11,3 \pm 0,3 \ \text{Вт}
+\]
+
+В схеме, собранной по рис. 2, меняя
+емкость, настраиваем контур в резонанс с
+частотой сети. Снимем значения
+резонансного тока $I$, резонансного
+напряжения на емкости $U_c$,
+резонансного напряжения на контуре
+$U_\Sigma$ и резонансное значение
+ёмкости.
+
+Величина дополнительного сопротивления
+$R_2$:
+ \[
+     R_2 = 5,6 \pm 0,1 \ \text{Ом}
+\]
+
+\begin{table}[H]
+    \begin{tabular}{|c|c|c|c|c|}
+        \hline
+        $x,\ \text{мм}$ & $I, \
+        \text{А}$ & $U_c, \ \text{В}$ &
+        $U_\Sigma, \ \text{В}$ & $C, \
+        \text{мкФ}$ \\ \hline
+        9 & 1,5 & 218 & 25,5 & 20,2\\
+        \hline
+    \end{tabular}
+    \captionsetup{justification=centering}
+    \caption {Величины, измеренные во
+    время резонанса}
+\end{table}
+
+Рассчитаем активное сопротивление
+катушки $r_L$ через ток и напряжение на
+контуре:
+\[
+r_L = \frac{U_\Sigma}{I} - R_2
+\]
+
+\[
+    r_L = 11,4 \pm 0,4 \ \text{Ом}
+\]
+
+Рассчитаем $r_L$ и $L$ через добротность
+$Q$:
+ \begin{align*}
+     Q &= \frac{U_c}{U_\Sigma} & Q &= 8,5 \pm 0,2\\
+     L &= \frac{1}{\omega_0^2C} =
+     \frac{1}{\Omega^2C} & L &= 500 \pm
+     30 \ \text{мГн}\\
+     r_L &= \frac{\omega_0 L}{Q} - R_2 &
+     r_L &= 12,9 \pm 0,9 \ \text{Ом}
+\end{align*}
+
+Измерим индуктивность катушки $L$ и ее
+активное сопротивление $r_L$ с помощью
+моста E7-8 при заданной частоте:
+\begin{table}[H]
+    \begin{tabular}{|c|c|c|}
+        \hline
+        $\nu, \ \text{Гц}$ & $L,\
+        \text{мГн}$ & $r_L, \ \text{Ом}$
+        \\ \hline
+        100 & 372 & 13,9\\ \hline
+        1000 & 338 & 190,3 \\ \hline
+    \end{tabular}
+    \captionsetup{justification=centering}
+    \caption{Измерение индуктивности $L$
+    и активного сопротивления $r_L$ с
+помощью моста  E7-8 }
+\end{table}
+
+Измерение сопротивления катушки с
+помощью омметра:
+\[
+    r_L = 4,28 \pm 0,05 \ \text{Ом}
+\]
+
+
+\section{Обсуждение результатов и выводы}
+Результаты измерений занесены в таблицу
+3.
+\begin{table}[H]
+    \begin{tabular}{|c|c|c|c|c|c|c|}
+        \hline
+        & Омметр & Мост E7-8 & График &
+        Вект. диагр. & $f(I, U_\Sigma)$
+                     & $f(Q)$ \\ \hline
+        $r_L, \ \text{Ом}$ & $4,28\pm
+        0,05$ & $13,9 \pm 0,1$ & $18
+        \pm 1$ & $2,6 \pm 0,2$ & $11,4 \pm
+        0,4$ & $12,9\pm 0,9$ \\ \hline
+        $L, \ \text{мГн}$ & -- & $372 \pm 5$ & $310 \pm
+        30$ & $318 \pm 14$ & -- & $500
+        \pm 30$ \\ \hline
+    \end{tabular}
+\end{table}
 
 
 \end{document}
