--- a/3 семестр (Электричество и магнетизм)/322(4.8)/322.tex
+++ b/3 семестр (Электричество и магнетизм)/322(4.8)/322.tex
@@ -466,7 +466,27 @@ $Q$:
         30$ & $318 \pm 14$ & -- & $500
         \pm 30$ \\ \hline
     \end{tabular}
+    \captionsetup{justification =
+    centering}
+    \caption { Результаты измерений
+    активного сопротивления $r_L$ и
+индуктивности $L$ различными способами}
 \end{table}
+
+Значения достаточно сильно различаются из-за способа измерения
+величин. Реальную катушку можно
+заменить колебательным контуром с
+собственными параметрами: $L$ --
+истинное значение индуктивности, $C_L$
+-- емкость, $r_L$ -- активное
+сопротивление. В результате в этом
+контуре возникают колебания с
+собственной частотой $\omega_L$. Поэтому
+величины, которые мы измеряем в цепи
+переменного тока могут заметно
+отличаться от величин,
+измеренных с помощью приборов,
+подключенных непосредственно к катушке.
 
 
 \end{document}
